force-app/main/default/objects/Account/fields/Cooperative_Client__c.field-meta.xml
<CustomField>
    <fullName>Cooperative_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Client been associated with any Commercial Business</description>
    <inlineHelpText>Please tick the Box</inlineHelpText>
    <label>Cooperative Client</label>
    <type>Checkbox</type>
</CustomField>