force-app/main/default/objects/Account/fields/Referrence__c.field-meta.xml
<CustomField>
    <fullName>Referrence__c</fullName>
    <description>who referred this account</description>
    <inlineHelpText>please check the lead detials</inlineHelpText>
    <label>Referrence</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>