force-app/main/default/objects/Account/fields/Spoc__c.field-meta.xml
<CustomField>
    <fullName>Spoc__c</fullName>
    <description>The Major contact to conduct any Activity</description>
    <label>Spoc</label>
    <length>250</length>
    <type>Text</type>
</CustomField>